--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -39,13 +39,17 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Main Page</a></li>
-                        <li class=""><a href="/stories">Sztorik</a></li>
-                        <li class=""><a href="/bloggers">Bloggerek</a></li>
+                        <li class=""><a href="/africa">Africa</a></li>
+                        <li class=""><a href="/asia">Asia</a></li>
+                        <li class=""><a href="/australia">Australia and Oceania</a></li>
+                        <li class=""><a href="/europe">Europe</a></li>
+                        <li class=""><a href="/north-america">North America</a></li>
+                        <li class=""><a href="/south-america">South America</a></li>
                     </ul>
                     <div class="navbar-text navbar-right">
-                        Üdvözlünk <span sec:authentication="name">Anonymous </span>
+                        Welcome <span sec:authentication="name">Anonymous </span>
                         <form sec:authorize="isAuthenticated()" id="frmlogout" th:action="@{/logout}" method="post" class="form-inline">
-                            | <a href="javascript:{}" onclick="document.getElementById('frmlogout').submit(); return false;">Kijelentkezés</a>
+                            | <a href="javascript:{}" onclick="document.getElementById('frmlogout').submit(); return false;">Log out</a>
                         </form>
                     </div>
                 </div>
