--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -11,21 +11,22 @@
 <div layout:fragment="content">
 
     <form name="login" th:action="@{/login}" method="post" class="form-signin">
-        <h2 class="form-signin-heading">Kérlek jelentkezz be</h2>
-        <div id="err" th:if="${param.error}" class="alert alert-danger">Hibás felhasználói név és jelszó</div>
-        <div th:if="${param.logout}" class="alert alert-success">Sikeresen kijelentkeztél</div>
-        <label for="username" class="sr-only">Felhasználói név</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Felhasználói név" required="true" />
-        <label for="password" class="sr-only">Jelszó</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Jelszó" required="true" />
+        <h2 class="form-signin-heading">Please, log in</h2>
+        <div id="err" th:if="${param.error}" class="alert alert-danger">Wrong email address or password!</div>
+        <div th:if="${param.logout}" class="alert alert-success">You have successfully logged out.</div>
+        <label for="email" class="sr-only">Email address</label>
+        <input type="text" id="email" name="username" class="form-control" placeholder="Email" required="true" />
+        <label for="password" class="sr-only">Password</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="true" />
         <div class="checkbox">
-            <label> <input id="remember-me" name="remember-me" type="checkbox" /> Emlékezz rám
+            <label>
+                <input id="remember-me" name="remember-me" type="checkbox" />Remember me
             </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Bejelentkezés</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
     </form>
 
-    <a href="/registration">Regisztrálni szeretnék</a>
+    <a href="/registration">I would like to register</a>
 </div>
 
 </body>
