Open News API and CSSMaps in new tab if user clicks on links

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -60,9 +60,9 @@
         </div>
 
 
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <footer>
-            <p>Powered by <a target="_blank" href="https://newsapi.org/">newsapi.org</a></p>
+            <p>Powered by <a target="_blank" href="https://newsapi.org">News API</a> and <a target="_blank" href="https://cssmapsplugin.com">CSSMap</a></p>
         </footer>
 
     </div>
