Show news in modal - not perfect yet, extra button needed

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -57,3 +57,7 @@ address {
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: #c7b7d6;
 }
+
+.fade {
+    opacity: 100!important;
+}
