--- a/src/main/resources/templates/europe.html
+++ b/src/main/resources/templates/europe.html
@@ -17,69 +17,102 @@
 </head>
 <body>
 
-<div layout:fragment="content">
+    <div layout:fragment="content">
 
-    <!-- CSSMap - Europe -->
-    <div id="map-europe">
-        <ul class="europe">
-            <li class="eu1"><a data-country-name="albania" data-country-code="al" href="#albania">Albania</a></li>
-            <li class="eu2"><a href="#andorra">Andorra</a></li>
-            <li class="eu3"><a data-country-name="austria" data-country-code="at" href="#austria" onclick="console.log('danke')" rel="nofollow">Austria</a></li>
-            <li class="eu4"><a href="#belarus">Belarus</a></li>
-            <li class="eu5"><a href="#belgium">Belgium</a></li>
-            <li class="eu6"><a href="#bosnia-and-herzegovina">Bosnia and Herzegovina</a></li>
-            <li class="eu7"><a href="#bulgaria">Bulgaria</a></li>
-            <li class="eu8"><a href="#croatia">Croatia</a></li>
-            <li class="eu9"><a href="#cyprus">Cyprus</a></li>
-            <li class="eu10"><a href="#czech-republic">Czech Republic</a></li>
-            <li class="eu11"><a href="#denmark">Denmark</a></li>
-            <li class="eu12"><a href="#estonia">Estonia</a></li>
-            <li class="eu13"><a href="#france">France</a></li>
-            <li class="eu14"><a href="#finland">Finland</a></li>
-            <li class="eu15"><a href="#georgia">Georgia</a></li>
-            <li class="eu16"><a href="#germany">Germany</a></li>
-            <li class="eu17"><a href="#greece">Greece</a></li>
-            <li class="eu18"><a href="#hungary">Hungary</a></li>
-            <li class="eu19"><a href="#iceland">Iceland</a></li>
-            <li class="eu20"><a href="#ireland">Ireland</a></li>
-            <li class="eu21"><a href="#san-marino">San Marino</a></li>
-            <li class="eu22"><a href="#italy">Italy</a></li>
-            <li class="eu23"><a href="#kosovo">Kosovo</a></li>
-            <li class="eu24"><a href="#latvia">Latvia</a></li>
-            <li class="eu25"><a href="#liechtenstein">Liechtenstein</a></li>
-            <li class="eu26"><a href="#lithuania">Lithuania</a></li>
-            <li class="eu27"><a href="#luxembourg">Luxembourg</a></li>
-            <li class="eu28"><a href="#macedonia">Macedonia <abbr title="The Former Yugoslav Republic of Macedonia">(F.Y.R.O.M.)</abbr></a></li>
-            <li class="eu29"><a href="#malta">Malta</a></li>
-            <li class="eu30"><a href="#moldova">Moldova</a></li>
-            <li class="eu31"><a href="#monaco">Monaco</a></li>
-            <li class="eu32"><a href="#montenegro">Montenegro</a></li>
-            <li class="eu33"><a href="#netherlands">Netherlands</a></li>
-            <li class="eu34"><a href="#norway">Norway</a></li>
-            <li class="eu35"><a href="#poland">Poland</a></li>
-            <li class="eu36"><a href="#portugal">Portugal</a></li>
-            <li class="eu37"><a href="#romania">Romania</a></li>
-            <li class="eu38"><a href="#russian-federation">Russian Federation</a></li>
-            <li class="eu39"><a href="#serbia">Serbia</a></li>
-            <li class="eu40"><a href="#slovakia">Slovakia</a></li>
-            <li class="eu41"><a href="#slovenia">Slovenia</a></li>
-            <li class="eu42"><a href="#spain">Spain</a></li>
-            <li class="eu43"><a href="#sweden">Sweden</a></li>
-            <li class="eu44"><a href="#switzerland">Switzerland</a></li>
-            <li class="eu45"><a href="#turkey">Turkey</a></li>
-            <li class="eu46"><a href="#ukraine">Ukraine</a></li>
-            <li class="eu47"><a href="#united-kingdom">United Kingdom</a></li>
-            <!--
-              <li class="eu48"><a href="#england">England</a></li>
-              <li class="eu49"><a href="#isle-of-man">Isle of Man</a></li>
-              <li class="eu50"><a href="#northern-ireland">Northern Ireland</a></li>
-              <li class="eu51"><a href="#scotland">Scotland</a></li>
-              <li class="eu52"><a href="#wales">Wales</a></li>
-            -->
-        </ul>
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newsModal">Open Modal</button>
+
+        <!-- CSSMap - Europe -->
+        <div id="map-europe">
+            <ul class="europe">
+                <li class="eu1"><a data-country-name="albania" data-country-code="al" href="#albania">Albania</a></li>
+                <li class="eu2"><a href="#andorra">Andorra</a></li>
+                <li class="eu3"><a role="button" data-toggle="modal" data-target="#newsModal" data-country-name="austria" data-country-code="at" href="#austria" rel="nofollow">Austria</a></li>
+                <li class="eu4"><a href="#belarus">Belarus</a></li>
+                <li class="eu5"><a href="#belgium">Belgium</a></li>
+                <li class="eu6"><a href="#bosnia-and-herzegovina">Bosnia and Herzegovina</a></li>
+                <li class="eu7"><a href="#bulgaria">Bulgaria</a></li>
+                <li class="eu8"><a href="#croatia">Croatia</a></li>
+                <li class="eu9"><a href="#cyprus">Cyprus</a></li>
+                <li class="eu10"><a href="#czech-republic">Czech Republic</a></li>
+                <li class="eu11"><a href="#denmark">Denmark</a></li>
+                <li class="eu12"><a href="#estonia">Estonia</a></li>
+                <li class="eu13"><a href="#france">France</a></li>
+                <li class="eu14"><a href="#finland">Finland</a></li>
+                <li class="eu15"><a href="#georgia">Georgia</a></li>
+                <li class="eu16"><a href="#germany">Germany</a></li>
+                <li class="eu17"><a href="#greece">Greece</a></li>
+                <li class="eu18"><a href="#hungary">Hungary</a></li>
+                <li class="eu19"><a href="#iceland">Iceland</a></li>
+                <li class="eu20"><a href="#ireland">Ireland</a></li>
+                <li class="eu21"><a href="#san-marino">San Marino</a></li>
+                <li class="eu22"><a href="#italy">Italy</a></li>
+                <li class="eu23"><a href="#kosovo">Kosovo</a></li>
+                <li class="eu24"><a href="#latvia">Latvia</a></li>
+                <li class="eu25"><a href="#liechtenstein">Liechtenstein</a></li>
+                <li class="eu26"><a href="#lithuania">Lithuania</a></li>
+                <li class="eu27"><a href="#luxembourg">Luxembourg</a></li>
+                <li class="eu28"><a href="#macedonia">Macedonia <abbr title="The Former Yugoslav Republic of Macedonia">(F.Y.R.O.M.)</abbr></a></li>
+                <li class="eu29"><a href="#malta">Malta</a></li>
+                <li class="eu30"><a href="#moldova">Moldova</a></li>
+                <li class="eu31"><a href="#monaco">Monaco</a></li>
+                <li class="eu32"><a href="#montenegro">Montenegro</a></li>
+                <li class="eu33"><a href="#netherlands">Netherlands</a></li>
+                <li class="eu34"><a href="#norway">Norway</a></li>
+                <li class="eu35"><a href="#poland">Poland</a></li>
+                <li class="eu36"><a href="#portugal">Portugal</a></li>
+                <li class="eu37"><a href="#romania">Romania</a></li>
+                <li class="eu38"><a href="#russian-federation">Russian Federation</a></li>
+                <li class="eu39"><a href="#serbia">Serbia</a></li>
+                <li class="eu40"><a href="#slovakia">Slovakia</a></li>
+                <li class="eu41"><a href="#slovenia">Slovenia</a></li>
+                <li class="eu42"><a href="#spain">Spain</a></li>
+                <li class="eu43"><a href="#sweden">Sweden</a></li>
+                <li class="eu44"><a href="#switzerland">Switzerland</a></li>
+                <li class="eu45"><a href="#turkey">Turkey</a></li>
+                <li class="eu46"><a href="#ukraine">Ukraine</a></li>
+                <li class="eu47"><a href="#united-kingdom">United Kingdom</a></li>
+                <!--
+                  <li class="eu48"><a href="#england">England</a></li>
+                  <li class="eu49"><a href="#isle-of-man">Isle of Man</a></li>
+                  <li class="eu50"><a href="#northern-ireland">Northern Ireland</a></li>
+                  <li class="eu51"><a href="#scotland">Scotland</a></li>
+                  <li class="eu52"><a href="#wales">Wales</a></li>
+                -->
+            </ul>
+        </div>
+
+        <!--news modal-->
+        <div class="modal fade" id="newsModal" tabindex="-1" role="dialog" aria-labelledby="newsModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="newsModalLabel">Fresh news</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <table class="table-bordered table-hover table-condensed table-responsive" id="news-table" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Author</th>
+                                    <th>Link</th>
+                                </tr>
+                            </thead>
+                            <tbody id="news-table-body">
+                                <!--here come table rows from Javascript-->
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-</div>
 
 </body>
 </html>
