Put forms and texts into Bootstrap container

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,11 +9,14 @@
 
 <div layout:fragment="content">
 
-    <h2>Last News</h2>
+    <div class="container">
+        <h1 id="main-title">Last News</h1>
+        <br />
 
-    <p>Here you can read the latest news from all around the world.</p>
-    <p>Just select a continent in the navigation bar, then choose a country from the map.</p>
-    <p>Have a nice reading trip!</p>
+        <p>Here you can read the latest news from all around the world.</p>
+        <p>Just select a continent in the navigation bar, then choose a country from the map.</p>
+        <p>Have a nice reading trip!</p>
+    </div>
 
 </div>
 
