--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -10,23 +10,29 @@
 
 <div layout:fragment="content">
 
-    <form name="login" th:action="@{/login}" method="post" class="form-signin">
-        <h2 class="form-signin-heading">Please, log in</h2>
-        <div id="err" th:if="${param.error}" class="alert alert-danger">Wrong email address or password!</div>
-        <div th:if="${param.logout}" class="alert alert-success">You have successfully logged out.</div>
-        <label for="email" class="sr-only">Email address</label>
-        <input type="text" id="email" name="username" class="form-control" placeholder="Email" required="true" />
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="true" />
-        <div class="checkbox">
-            <label>
-                <input id="remember-me" name="remember-me" type="checkbox" />Remember me
-            </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-    </form>
+    <div class="container">
+        <h1 id="main-title">Last News</h1>
 
-    <a href="/registration">I would like to register</a>
+        <form name="login" th:action="@{/login}" method="post" class="form-signin">
+            <h3 class="form-signin-heading">Please, log in</h3>
+            <div id="err" th:if="${param.error}" class="alert alert-danger">Wrong email address or password!</div>
+            <div th:if="${param.logout}" class="alert alert-success">You have successfully logged out.</div>
+            <label for="email" class="sr-only">Email address</label>
+            <input type="text" id="email" name="username" class="form-control" placeholder="Email" required="true" />
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="true" />
+            <div class="checkbox">
+                <label>
+                    <input id="remember-me" name="remember-me" type="checkbox" />Remember me
+                </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+        </form>
+
+        <a href="/registration">I would like to register</a>
+
+    </div>
+
 </div>
 
 </body>
