--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,13 +10,17 @@
 
 <div layout:fragment="content">
 
-    <form name="registration" th:action="@{/reg}" th:object="${user}" method="post" class="form-signin">
-        <h2 class="form-signin-heading">Please, register</h2>
-        <input type="text" id="username" name="username" th:field="*{userName}" class="form-control" placeholder="Username" />
-        <input type="text" id="email" name="email" th:field="*{email}" class="form-control" placeholder="E-mail address" />
-        <input type="password" id="password" name="password" th:field="*{password}"  class="form-control" placeholder="Password" />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-    </form>
+    <div class="container">
+        <h1 id="main-title">Last News</h1>
+
+        <form name="registration" th:action="@{/reg}" th:object="${user}" method="post" class="form-signin">
+            <h3 class="form-signin-heading">Please, register</h3>
+            <input type="text" id="username" name="username" th:field="*{userName}" class="form-control" placeholder="Username" />
+            <input type="text" id="email" name="email" th:field="*{email}" class="form-control" placeholder="E-mail address" />
+            <input type="password" id="password" name="password" th:field="*{password}"  class="form-control" placeholder="Password" />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+        </form>
+    </div>
 
 </div>
 
