Delete unused data attributes from CSSMap anchor elements

--- a/src/main/resources/templates/europe.html
+++ b/src/main/resources/templates/europe.html
@@ -24,16 +24,16 @@
         <!-- CSSMap - Europe -->
         <div id="map-europe">
             <ul class="europe">
-                <li class="eu1"><a data-country-name="albania" data-country-code="al" href="#albania" rel="nofollow">Albania</a></li>
-                <li class="eu2"><a data-country-name="andorra" data-country-code="ad" href="#andorra" rel="nofollow">Andorra</a></li>
-                <li class="eu3"><a data-country-name="austria" data-country-code="at" href="#austria" rel="nofollow">Austria</a></li>
-                <li class="eu4"><a data-country-name="belarus" data-country-code="by" href="#belarus" rel="nofollow">Belarus</a></li>
-                <li class="eu5"><a data-country-name="belgium" data-country-code="be" href="#belgium" rel="nofollow">Belgium</a></li>
-                <li class="eu6"><a data-country-name="bosnia-and-herzegovina" data-country-code="ba" href="#bosnia-and-herzegovina" rel="nofollow">Bosnia and Herzegovina</a></li>
-                <li class="eu7"><a data-country-name="bulgaria" data-country-code="al" href="#bulgaria" rel="nofollow">Bulgaria</a></li>
-                <li class="eu8"><a data-country-name="croatia" data-country-code="al" href="#croatia" rel="nofollow">Croatia</a></li>
-                <li class="eu9"><a data-country-name="cyprus" data-country-code="al" href="#cyprus" rel="nofollow">Cyprus</a></li>
-                <li class="eu10"><a data-country-name="czech-republic" data-country-code="al" href="#czech-republic" rel="nofollow">Czech Republic</a></li>
+                <li class="eu1"><a href="#albania" rel="nofollow">Albania</a></li>
+                <li class="eu2"><a href="#andorra" rel="nofollow">Andorra</a></li>
+                <li class="eu3"><a href="#austria" rel="nofollow">Austria</a></li>
+                <li class="eu4"><a href="#belarus" rel="nofollow">Belarus</a></li>
+                <li class="eu5"><a href="#belgium" rel="nofollow">Belgium</a></li>
+                <li class="eu6"><a href="#bosnia-and-herzegovina" rel="nofollow">Bosnia and Herzegovina</a></li>
+                <li class="eu7"><a href="#bulgaria" rel="nofollow">Bulgaria</a></li>
+                <li class="eu8"><a href="#croatia" rel="nofollow">Croatia</a></li>
+                <li class="eu9"><a href="#cyprus" rel="nofollow">Cyprus</a></li>
+                <li class="eu10"><a href="#czech-republic" rel="nofollow">Czech Republic</a></li>
                 <li class="eu11"><a href="#denmark" rel="nofollow">Denmark</a></li>
                 <li class="eu12"><a href="#estonia" rel="nofollow">Estonia</a></li>
                 <li class="eu13"><a href="#france" rel="nofollow">France</a></li>
